--- a/src/chrome/browser/feeds/subscribe.css
+++ b/src/chrome/browser/feeds/subscribe.css
@@ -66,6 +66,10 @@ html {
   padding-top: 0.2em;
 }
 
+img {
+  max-width: 100%;
+}
+
 /* Don't print subscription UI */
 @media print {
   #feedHeaderContainer {
